--- a/setup.cfg
+++ b/setup.cfg
@@ -9,20 +9,22 @@ classifiers =
 [options]
 packages = nocarz
 install_requires =
-    setuptools>=56.0.0
-    fastapi[standard]>=0.115.12
-    pandas>=2.2.3
-    scikit-learn>=1.6.1
-    matplotlib>=3.10.3
-    seaborn>=0.13.2
+    setuptools>=56.0
+    fastapi[standard]>=0.115
+    pandas>=2.2
+    scikit-learn>=1.6
+    matplotlib>=3.10
+    seaborn>=0.13
+    requests>=2.32
+    types-requests>=2.32
 python_requires = >=3.10
 zip_safe = no
 
 [options.extras_require]
 testing =
-    black==24.8.0
-    flake8==7.1.2
-    mypy==1.14.1
+    black>=24.8
+    flake8>=7.1
+    mypy>=1.14
 
 [options.package_data]
 bla_bla = py.typed
