--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
 asttokens==3.0.0
-black==24.8.0
+black==25.1.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.2.1
 comm==0.2.2
 contourpy==1.3.2
@@ -15,7 +16,7 @@ exceptiongroup==1.3.0
 executing==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
-flake8==7.1.2
+flake8==7.2.0
 fonttools==4.58.1
 h11==0.16.0
 httpcore==1.0.9
@@ -36,12 +37,12 @@ matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
-mypy==1.14.1
+mypy==1.16.0
 mypy_extensions==1.1.0
 nest-asyncio==1.6.0
 numpy==2.2.6
 packaging==25.0
-pandas==2.2.3
+pandas==2.3.0
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
@@ -51,10 +52,10 @@ prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pycodestyle==2.12.1
+pycodestyle==2.13.0
 pydantic==2.11.5
 pydantic_core==2.33.2
-pyflakes==3.2.0
+pyflakes==3.3.2
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -63,6 +64,7 @@ python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
+requests==2.32.3
 rich==14.0.0
 rich-toolkit==0.14.7
 scikit-learn==1.6.1
@@ -78,10 +80,12 @@ tomli==2.2.1
 tornado==6.5.1
 traitlets==5.14.3
 typer==0.16.0
+types-requests==2.32.0.20250602
 typing-inspection==0.4.1
-typing_extensions==4.13.2
+typing_extensions==4.14.0
 tzdata==2025.2
-uvicorn==0.34.2
+urllib3==2.4.0
+uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 wcwidth==0.2.13
