update: setup files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nocarz
-description = W momencie w którym dodawana jest oferta należy wypełnić wiele pól. Może dałoby się jakoś usprawnić ten proces?
+description = When adding an offer, many fields need to be filled in. Perhaps this process could be streamlined?
 author = Michał Pałasz & Michał Sadlej
 platforms = linux
 classifiers =
